--- a/client/package.json
+++ b/client/package.json
@@ -3,7 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "proxy": "http://localhost:3001/",
-  "dependencies": {},
+  "dependencies": {
+    "react": "^16.12.0",
+    "react-bootstrap": "^1.0.0-beta.16",
+    "react-dom": "^16.12.0",
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "^3.3.0"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
