--- a/package.json
+++ b/package.json
@@ -24,5 +24,13 @@
   "bugs": {
     "url": "https://github.com/tcutlip08/Jeopardy_React/issues"
   },
-  "homepage": "https://github.com/tcutlip08/Jeopardy_React#readme"
+  "homepage": "https://github.com/tcutlip08/Jeopardy_React#readme",
+  "dependencies": {
+    "concurrently": "^5.0.2",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "mongoose": "^5.8.9",
+    "nodemon": "^2.0.2",
+    "path": "^0.12.7"
+  }
 }
